Auth service is done regex should be added
